// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate map for > project with external links in toc 1`] = `
"{
	"files": [
		"ru/",
		"ru/folder1/a1",
		"ru/folder1/folder2/a1",
		"ru/plugins/",
		"ru/project/",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with multiple language 1`] = `
"{
	"files": [
		"en/",
		"en/plugins/",
		"en/plugins/import",
		"en/project/",
		"en/project/config",
		"en/settings",
		"ru/",
		"ru/plugins/",
		"ru/plugins/import",
		"ru/project/",
		"ru/project/config",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with single language and toc include - only md2html 1`] = `
"{
	"files": [
		"ru/",
		"ru/folder1/a1",
		"ru/folder1/folder2/a1",
		"ru/plugins/",
		"ru/plugins/import",
		"ru/project/",
		"ru/project/config",
		"ru/settings"
	]
}"
`;

exports[`Generate map for > project with single language and toc include 1`] = `
"{
	"files": [
		"ru/",
		"ru/folder1/a1",
		"ru/folder1/folder2/a1",
		"ru/plugins/",
		"ru/plugins/import",
		"ru/project/",
		"ru/project/config",
		"ru/settings"
	]
}"
`;
